update image scale

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1747,6 +1747,9 @@ input, select, textarea {
 	.image {
 		display: inline-block;
 		border: 0;
+		float: left;
+		width: 100px;
+		height: 100px;
 	}
 
 		.image img {
