--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2635,7 +2635,7 @@ input, select, textarea {
 .imgtxt {
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-around;
 }
 
 .image {
