--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -193,7 +193,7 @@ input, select, textarea {
 
 	hr {
 		border: 0;
-		border-top: solid 1px #ddd;
+		border-top: solid 1px #4a231b;
 	}
 
 	blockquote {
